--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 <style type="text/css">
   body {
+    font: 14px helvetica,arial,freesans,clean,sans-serif;
     margin-top: 1.0em;
     background: url("corkscrew.jpg") no-repeat scroll 0 0 #fff;
     font-family: "Helvetica,Arial,FreeSans";
@@ -18,17 +19,17 @@
 
   #container {
     margin: 0 auto;
-    width: 1200px;
+    width: 900px;
   }
   h1 { font-size: 4.8em; color: #733; margin-bottom: 3px; }
   .lobster { font-family: 'Lobster', arial, serif; }
   h1 a { text-decoration: none }
-  h2 { font-size: 1.5em; color: #733; }
-  h3 { text-align: center; color: #733; }
+  h2 { text-decoration: underline; font-size: 1.7em; color: #733; }
+  h3 { font-size: 1.5em; color: #733; }
   a { color: #ad9dfa; }
   .download { float: right; }
   li {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
   }
   pre {
     font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
@@ -39,7 +40,9 @@
   }
   code {
     font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
+    padding: 3px;
     background-color: #eee;
+    color: #222;
   }
   hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
   .footer { text-align:center; padding-top:30px; font-style: italic; }
@@ -61,18 +64,95 @@
 
     <h2>Rationale</h2>
     <ul>
-      <li>Unlike Capistrano, screwcap is "dumb".  It makes no assumptions about the tasks you are running on remote machines, and it's not opinionated. You are free to create your own roles and workflows.</li>
-      <li>Unlike vlad, screwcap is not directly tied to rake, although it can be.</li>
+      <li>Dead-simple DSL for remote task management.</li>
+      <li>Screwcap is not opinionated.
+      <li>Screwcap is very light on magic and unicorns.  Screwcap recipes are basically only a collection of servers and tasks. It does not know how to do things unless you tell it how to do things.</li> 
+      <li>Screwcap is not tied into rake, although it easily can be.</li>
+      <li>Screwcap can easily be used to deploy rails applications.</li>
       <li>Rails deployment methodologies change.  App servers change.  Things change.  Because of that, there is nothing rails-deployment-specific about screwcap.  Sure, screwcap can easily be used for deploying rails applications, but it's not a one-trick pony.</li>
-      <li>There are main keywords: <code>server</code> to declare your remote servers, <code>set</code> to set variables, and <code>task_for</code> to write a task to run on those servers.</li>
     </ul>
 
     <h2>Example Recipe</h2>
-    <script src="http://gist.github.com/649852.js?file=gistfile1.rb"></script>
+    <script src="http://gist.github.com/649852.js?file=recipe.rb"></script>
+    <p>To execute the above recipe, run the following:</p>
+    <p><code>screwcap recipe.rb restart_server</code></p>
 
-    <h2>Use in Rails</h2>
+    <h2>Servers</h2>
+    <p>Servers contain the address(es) you would like to run your tasks on.</p>
+    <strong>Options</strong>
+    <ul>
+      <li>You can specify a single <code>:address</code> or multiple <code>:addresses</code> per server.</li>
+      <li>Minimally you also need a <code>:user</code> and either <code>:keys</code> or <code>:password</code> to ensure the server is valid.</li>
+      <li>You can also specify a <code>:gateway</code>.  A gateway is an intermidiary computer between you and the server.</li>
+    </ul>
+    <strong>Examples:</strong>
+    <script src="http://gist.github.com/651976.js?file=servers.rb"></script>
+
+    <h2>Tasks and Command Sets</h2>
+    <p>Tasks are a simple collection of commands to run on a server or servers.</p>
+    <p>Command sets are a generic package of commands that can be run by tasks.  Command sets are the main differentiator between screwcap and all other remote task management libraries.</p>
+    <strong>Options</strong>
+    <ul>
+      <li>A <code>:server</code> or an array of <code>:servers</code> to run this task on.</li>
+      <li>By default, a task will run simultaneously on all addresses provided by the servers.  You can prevent this by setting <code>:parallel</code> to <code>false</code>.</li>
+    </ul>
+    <strong>Commands</strong>
+    <ul>
+      <li><code>Run</code> Run a command.  
+      <ul>
+        <li><code>:onfailure</code> If the command returns a non-zero status, the task will abort and run the referenced <a href="#command_sets">command set</a>.</li>
+        <li><code>:onfailure</code> If the command returns a non-zero status, the task will abort and run the referenced <a href="#command_sets">command set</a>.</li>
+      </ul>
+      <li><code>scp</code> a file.
+      <ul>
+        <li><code>:local</code> The local file on your hard drive.</li>
+        <li><code>:remote</code> The location to put the file on the remote server.</li>
+      </ul>
+      <li><code>local</code> - run a command locally.</li> 
+      <ul>
+        <li><code>:onfailure</code> If the command returns a non-zero status, the task will abort and run the referenced command set.</li>
+      </ul>
+    </ul>
+    <strong>Examples:</strong>
+    <script src="http://gist.github.com/651979.js?file=task.rb"></script>
+
+    <h2>Use</h2>
+    <p>The <code>use</code> keyword will automatically import another recipe file into your main recipe file.</p>
+    <p>Currently <code>use</code> only looks in the same directory as your recipe file.</p>
+    <strong>Examples:</strong>
+    <p>You have one file, called commands.rb</p>
+    <script src="http://gist.github.com/652054.js?file=commands.rb"></script>
+    <p>Then you have your main recipe file.</p>
+    <script src="http://gist.github.com/652061.js?file=recipe.rb"></script>
+    <p>All the items from commands.rb will be fully ingrained and ready to use in your recipe file.</p>
+    <strong>command sets and the use keyword is how screwcap is able to decouple itself from doing specific tasks, like deploying a rails application.</strong>
+
+    <h2>Variables</h2>
+    <p>You can declare variables with the <code>set</code> command anywhere in the deployment recipe.  Variables can be overridden in tasks and command sets.  Variables inherit the scope of the calling task or command set.</p>
+    <strong>Examples:</strong>
+    <script src="http://gist.github.com/652015.js?file=variables.rb"></script>
+
+    <h2>Sequences</h2>
+    <p>Sequences are a list of tasks to run.</p>
+    <strong>Options:</strong>
+    <ul>
+      <li>Sequences take a single argument, <code>:tasks</code>, which is a list of tasks to run.</li>
+    </ul>
+    <script src="http://gist.github.com/652022.js?file=sequences.rb"></script>
+
+    <h2>How to use screwcap</h2>
+    <p>Screwcap comes with a binary called <code>screwcap</code>.  You can run one or more tasks using the binary.</p>
+    <script src="http://gist.github.com/652048.js?file=gistfile1.sh"></script>
+    <h3>Use in a rakefile</h3>
+    <p>An example generic rakefile exists <a href="http://github.com/gammons/screwcap_recipes/blob/master/rails/screwcap.rake">here</a>.</p>
+    <h3>Deploying Rails applications</h3>
+    <p>Screwcap is a great choice to deploy rails applications, because the actual deployment implementation is decoupled from the screwcap base, thus the recipe file can be updated continually.</p>
+
+
+    <p>An example generic rakefile exists <a href="http://github.com/gammons/screwcap_recipes/blob/master/rails/screwcap.rake">here</a>.</p>
+
+    <h2>Recipe Database</h2>
+    <p>I started a new repository called <a href="http://github.com/gammons/screwcap_recipes">screwcap_recipes</a> that contains all the latest and greatest recipes that fellow screwcappers have to offer.  Feel free to write your own and contribute!</p>
   </div>
-
-  
 </body>
 </html>
