--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p>Then you have your main recipe file.</p>
     <script src="http://gist.github.com/652061.js?file=recipe.rb"></script>
     <p>All the items from commands.rb will be fully ingrained and ready to use in your recipe file.</p>
-    <strong>command sets and the use keyword are how screwcap is able to decouple itself from doing specific tasks, like deploying a rails application.</strong>
+    <strong>Using command sets and the use keyword is how screwcap is able to be decoupled from tasks, like deploying a rails application.</strong>
 
     <h2>Variables</h2>
     <p>You can declare variables with the <code>set</code> command anywhere in the deployment recipe.  Variables can be overridden in tasks and command sets.  Variables inherit the scope of the calling task or command set.</p>
