--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <strong>Using command sets and the use keyword is how screwcap is able to be decoupled from tasks, like deploying a rails application.</strong>
 
     <h2>Variables</h2>
-    <p>You can declare variables with the <code>set</code> command anywhere in the deployment recipe.  Variables can be overridden in tasks and command sets.  Variables inherit the scope of the calling task or command set.</p>
+    <p>You can declare variables with the <code>set</code> command anywhere in the deployment recipe.  Variables can be overridden in tasks and command sets.  Tasks and command sets inherit the scope of the calling task or command set.</p>
     <strong>Examples:</strong>
     <script src="http://gist.github.com/652015.js?file=variables.rb"></script>
 
