--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <li>Screwcap is not tied into rake, although it easily can be.</li>
       <li>Screwcap can easily be used to deploy rails applications.</li>
       <li>Rails deployment methodologies change.  App servers change.  Things change.  Because of that, there is nothing rails-deployment-specific about screwcap.  Sure, screwcap can easily be used for deploying rails applications, but it's not a one-trick pony.</li>
+      <li>Screwcap is proven out in the wild.  Here at <a href="http://www.pipelinedeals.com">PipelineDeals</a>, we use screwcap deploy our app to over a dozen different production servers.</li>
     </ul>
 
     <h2>Installation</h2>
